add bookings api
