# routes/web.php
@@ -6,10 +6,14 @@ use App\Http\Controllers\SalesForceController;
 Route::get('/', function () {
     return view('welcome');
 });
-/**
- * post servicesOauth2TokenPOST
- * Summary: Lấy JWT access_token và instance_url test.salesforce.com
- * Notes:
- * Output-Formats: [application/json]
- */
-Route::post('/services/oauth2/token', [SalesForceController::class, 'getToken']);
+Route::prefix('services')->group(function () {
+    /**
+     * post servicesOauth2TokenPOST
+     * Summary: Lấy JWT access_token và instance_url test.salesforce.com
+     * Notes:
+     * Output-Formats: [application/json]
+     */
+    Route::post('/oauth2/token', [SalesForceController::class, 'getToken']);
+    Route::post('/apexrest/hkt/v1.0/bookings', [SalesForceController::class, 'bookings']);
+});
+
